--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:baselineAligned="false"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -14,120 +13,152 @@
     tools:context="com.jeegnathebug.tttjeegna.MainActivity"
     android:orientation="horizontal"
     tools:showIn="@layout/activity_main"
-    android:id="@+id/main_content">
+    android:id="@+id/main_content"
+    android:baselineAligned="false">
 
     <TableLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="80"
+        android:layout_weight="3"
         android:id="@+id/tableLayout">
 
         <TableRow
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="33">
+            android:layout_weight="1">
 
             <ImageButton
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton1"
                 android:layout_column="0"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
+                android:src="@drawable/blank"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:cropToPadding="false"
+                android:layout_margin="3dp"
+                android:padding="0dp" />
 
             <ImageButton
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton2"
                 android:layout_column="1"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
+                android:src="@drawable/blank"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:cropToPadding="false"
+                android:layout_margin="3dp"
+                android:padding="0dp" />
 
             <ImageButton
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton3"
                 android:layout_column="2"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
+                android:src="@drawable/blank"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:cropToPadding="false"
+                android:layout_margin="3dp"
+                android:padding="0dp" />
         </TableRow>
 
         <TableRow
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="33">
+            android:layout_weight="1"
+            android:layout_margin="3dp"
+            android:padding="0dp">
 
             <ImageButton
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton4"
                 android:layout_column="0"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
+                android:src="@drawable/blank"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:cropToPadding="false"
+                android:layout_margin="3dp"
+                android:padding="0dp" />
 
             <ImageButton
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton5"
                 android:layout_column="1"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
+                android:src="@drawable/blank"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:cropToPadding="false"
+                android:layout_margin="3dp"
+                android:padding="0dp" />
 
             <ImageButton
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton6"
                 android:layout_column="2"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
+                android:src="@drawable/blank"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:cropToPadding="false"
+                android:layout_margin="3dp"
+                android:padding="0dp" />
         </TableRow>
 
         <TableRow
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="33">
+            android:layout_weight="1"
+            android:layout_margin="3dp"
+            android:padding="0dp">
 
             <ImageButton
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton7"
                 android:layout_column="0"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
+                android:src="@drawable/blank"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:cropToPadding="false"
+                android:layout_margin="3dp"
+                android:padding="0dp" />
 
             <ImageButton
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton8"
                 android:layout_column="1"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
+                android:src="@drawable/blank"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:cropToPadding="false"
+                android:layout_margin="3dp"
+                android:padding="0dp" />
 
             <ImageButton
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton9"
                 android:layout_column="2"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
+                android:src="@drawable/blank"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:cropToPadding="false"
+                android:layout_margin="3dp"
+                android:padding="0dp" />
         </TableRow>
     </TableLayout>
 
@@ -135,7 +166,7 @@
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="20">
+        android:layout_weight="1">
 
         <Button
             android:layout_width="match_parent"
