--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,7 +18,7 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="80"
+        android:layout_weight="6"
         android:id="@+id/tableLayout">
         <TableRow
             android:layout_width="match_parent"
@@ -28,33 +28,38 @@
             <ImageButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton1"
                 android:layout_column="0"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
                 android:adjustViewBounds="true"
                 android:src="@drawable/blank"
-                />
+                android:padding="0dp"
+                android:layout_margin="3dp" />
 
             <ImageButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton2"
                 android:layout_column="1"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:src="@drawable/blank"
+                android:padding="0dp"
+                android:layout_margin="3dp" />
 
             <ImageButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton3"
                 android:layout_column="2"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:src="@drawable/blank"
+                android:padding="0dp"
+                android:layout_margin="3dp" />
         </TableRow>
 
         <TableRow
@@ -65,32 +70,38 @@
             <ImageButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton4"
                 android:layout_column="0"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:src="@drawable/blank"
+                android:padding="0dp"
+                android:layout_margin="3dp" />
 
             <ImageButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton5"
                 android:layout_column="1"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:src="@drawable/blank"
+                android:padding="0dp"
+                android:layout_margin="3dp" />
 
             <ImageButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton6"
                 android:layout_column="2"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:src="@drawable/blank"
+                android:padding="0dp"
+                android:layout_margin="3dp" />
         </TableRow>
 
         <TableRow
@@ -101,32 +112,38 @@
             <ImageButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton7"
                 android:layout_column="0"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:src="@drawable/blank"
+                android:padding="0dp"
+                android:layout_margin="3dp" />
 
             <ImageButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton8"
                 android:layout_column="1"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:src="@drawable/blank"
+                android:padding="0dp"
+                android:layout_margin="3dp" />
 
             <ImageButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="33"
+                android:layout_weight="1"
                 android:id="@+id/imageButton9"
                 android:layout_column="2"
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
                 android:adjustViewBounds="true"
-                android:src="@drawable/blank" />
+                android:src="@drawable/blank"
+                android:padding="0dp"
+                android:layout_margin="3dp" />
         </TableRow>
     </TableLayout>
 
@@ -135,38 +152,42 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="15">
+        android:layout_weight="1">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:text="@string/button_restart"
             android:id="@+id/buttonRestart"
-            android:onClick="restartGame"/>
+            android:onClick="restartGame"
+            style="?android:attr/buttonBarButtonStyle" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="2"
             android:text="@string/button_versus"
             android:id="@+id/buttonVersus"
-            android:onClick="changeGameMode" />
+            android:onClick="changeGameMode"
+            style="?android:attr/buttonBarButtonStyle" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:text="@string/score_title"
             android:id="@+id/buttonScores"
-            android:onClick="scores" />
+            android:onClick="scores"
+            style="?android:attr/buttonBarButtonStyle" />
     </LinearLayout>
 
     <TextView
         android:textAlignment="center"
-        android:gravity="center"
         android:text="@string/PvE"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textViewVersus"
-        android:layout_weight="5" />
+        android:id="@+id/textViewVersus" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewPlayerTurn"
+        android:textAlignment="center" />
 </LinearLayout>
